Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8208918 | 8u201 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
JDK-8198556 | 8u192 | Fairoz Matte | P4 | Resolved | Fixed | b02 |
JDK-8216738 | emb-8u201 | Fairoz Matte | P4 | Resolved | Fixed | master |
It manifests as unreachable Object[] arrays when you browse the heap dump.
The problem is there again after
Attempt to move the field from ConstantPool to klass mirror failed (doesn't work well with class redefinition).
Alternative approaches were discussed on hotspot-dev@ojn:
http://mail.openjdk.java.net/pipermail/hotspot-dev/2015-May/018562.html
- backported by
-
JDK-8198556 ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-
-
JDK-8208918 ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-
-
JDK-8216738 ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-
- duplicates
-
JDK-8173594 jvmti heap dump reporting wrong object liveness info
-
- Closed
-
-
JDK-8197544 Memory Leak when using Nashorn, missing gc roots
-
- Closed
-
-
JDK-8199303 Nashorn provides a memory leaks when using Tomcat and spark-java
-
- Closed
-
- relates to
-
JDK-8187896 SA: ConstantPool::_resolved_references missing in heap dump by SA
-
- Open
-
-
JDK-8059340 ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-
-
JDK-8080852 Java heap dump doesn't contain klass mirror objects unless they are explicitly referenced
-
- Closed
-
-
JDK-8173594 jvmti heap dump reporting wrong object liveness info
-
- Closed
-