8081323: ConstantPool::_resolved_references is missing in heap dump

Add resolved_references and init_lock as hidden static field in class so root is found.

Reviewed-by: hseigel, jiangli, sspitsyn